@@ -1,22 +1,27 @@
 package com.hartwig.hmftools.lilac.fragment;
 
+import static com.hartwig.hmftools.lilac.LilacConstants.DEFAULT_MIN_HIGH_QUAL_EVIDENCE_FACTOR;
+
 import java.util.List;
+import java.util.Map;
+import java.util.SortedMap;
 import java.util.stream.Collectors;
 
 import com.google.common.collect.Lists;
 import com.hartwig.hmftools.lilac.seq.SequenceCount;
+import com.hartwig.hmftools.lilac.utils.Nucleotide;
 
 public final class NucleotideFragmentQualEnrichment
 {
-    public static List<Fragment> qualityFilterFragments(
-            double minEvidence, double minHighQualEvidence, final List<Fragment> fragments, final List<Fragment> highQualFrags)
+    public static List<Fragment> qualityFilterFragments(final int minEvidenceDepth, final double minEvidenceFactor, final double minHighQualEvidenceFactor,
+            final List<Fragment> fragments, final List<Fragment> highQualFrags)
     {
         // fragments are all in nucleotide-space
 
         // filter fragments so that each nucleotide has at least 1 base at or above the min-qual threshold, and
         // X fragments (minEvidence) at that base with any qual
-        SequenceCount highQualCounts = SequenceCount.nucleotides(minHighQualEvidence, highQualFrags);
-        SequenceCount rawCounts = SequenceCount.nucleotides(minEvidence, fragments);
+        SequenceCount highQualCounts = SequenceCount.nucleotides(minEvidenceDepth, minHighQualEvidenceFactor, highQualFrags);
+        SequenceCount rawCounts = SequenceCount.nucleotides(minEvidenceDepth, minEvidenceFactor, fragments);
 
         return fragments.stream().map(x -> applyQualityFilter(x, highQualCounts, rawCounts)).collect(Collectors.toList());
     }
@@ -25,20 +30,22 @@ public final class NucleotideFragmentQualEnrichment
     {
         // checks whether all nucleotides have qual above the required level - if so return this fragment unch, otherwise build a
         // new fragment just with these filtered loci
-        final List<Integer> filteredIndices = Lists.newArrayList();
+        SortedMap<Integer, Nucleotide> nucleotidesByLoci = fragment.nucleotidesByLoci();
         boolean allPresent = true;
-
-        for(int i = 0; i < fragment.nucleotideLoci().size(); ++i)
+        final List<Nucleotide> filteredNucleotides = Lists.newArrayListWithExpectedSize(nucleotidesByLoci.size());
+        for(Map.Entry<Integer, Nucleotide> entry : nucleotidesByLoci.entrySet())
         {
-            int lociIndex = fragment.nucleotideLoci().get(i);
-            String fragmentNucleotide = fragment.nucleotides().get(i);
-            List<String> highQualitySequences = highQualityCount.getMinCountSequences(lociIndex);
-            List<String> rawSequences = rawCount.getMinCountSequences(lociIndex);
-            List<String> allowedSequences = highQualitySequences.stream().filter(x -> rawSequences.contains(x)).collect(Collectors.toList());
+            int locus = entry.getKey();
+            Nucleotide nucleotide = entry.getValue();
+            String fragmentNucleotide = entry.getValue().bases();
+
+            List<String> highQualitySequences = highQualityCount.getMinEvidenceSequences(locus, DEFAULT_MIN_HIGH_QUAL_EVIDENCE_FACTOR);
+            List<String> rawSequences = rawCount.getMinEvidenceSequences(locus);
+            List<String> allowedSequences = highQualitySequences.stream().filter(rawSequences::contains).toList();
 
             if(allowedSequences.contains(fragmentNucleotide))
             {
-                filteredIndices.add(i);
+                filteredNucleotides.add(nucleotide);
             }
             else
             {
@@ -47,22 +54,12 @@ public final class NucleotideFragmentQualEnrichment
         }
 
         if(allPresent)
-            return fragment;
-
-        int filteredCount = filteredIndices.size();
-        final List<Integer> filteredLoci = Lists.newArrayListWithExpectedSize(filteredCount);
-        final List<Integer> filteredQuality = Lists.newArrayListWithExpectedSize(filteredCount);
-        final List<String> filteredNucleotides = Lists.newArrayListWithExpectedSize(filteredCount);
-
-        for(Integer index : filteredIndices)
         {
-            filteredLoci.add(fragment.nucleotideLoci().get(index));
-            filteredQuality.add(fragment.nucleotideQuality().get(index));
-            filteredNucleotides.add(fragment.nucleotides().get(index));
+            return fragment;
         }
 
         Fragment newFragment = new Fragment(
-                fragment.reads().get(0), fragment.readGene(), fragment.genes(), filteredLoci, filteredQuality, filteredNucleotides);
+                fragment.reads().get(0), fragment.readGene(), fragment.genes(), filteredNucleotides);
 
         newFragment.addReads(fragment);
 
